Overlap fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -79,3 +79,8 @@ span#song-time{
 .logo-img{
     margin-left:5px;
 }
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
